--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,5 +1,5 @@
 <section class="section-product" id="products">
-   <div class="container-product">
+   <div class="container container-product">
       <h2 class="section-product-title">Our <span>products</span></h2>
       <div class="swiper-product swiper-container">
          <ul class="section-product-list swiper-wrapper">
