добавил модалку. Исправил скрипты

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,23 +4,23 @@
          ><span class="logo-text">SIMPLY CHOCOLATE</span ><span class="logo-icon"><img src="./img/icons/logo-desktop.svg" alt=""></span></a
       >
 
-      <ul class="nav-menu">
-         <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link"
-               ><span class="nav-link-line"></span>Home</a
+      <ul class="nav-menu-desktop">
+         <li class="nav-menu-item-desktop">
+            <a href="#home" class="nav-menu-link-desktop"
+               ><span class="nav-link-line-desktop"></span>Home</a
             >
          </li>
-         <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link">How it’s made?</a>
+         <li class="nav-menu-item-desktop">
+            <a href="#howtomade" class="nav-menu-link-desktop">How it’s made?</a>
          </li>
-         <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link">Our products</a>
+         <li class="nav-menu-item-desktop">
+            <a href="#products" class="nav-menu-link-desktop">Our products</a>
          </li>
-         <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link">Top sellers</a>
+         <li class="nav-menu-item-desktop">
+            <a href="#sellers" class="nav-menu-link-desktop">Top sellers</a>
          </li>
-         <li class="nav-menu-item">
-            <a href="#" class="nav-menu-link">Chocolate is loved</a>
+         <li class="nav-menu-item-desktop">
+            <a href="#revievs" class="nav-menu-link-desktop">Chocolate is loved</a>
          </li>
       </ul>
 
@@ -51,21 +51,21 @@
         
          <ul class="nav-menu">
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link  modal-scroll"
+               <a href="#home" class="menu-toggle nav-menu-link  modal-scroll"
                   ><span class="nav-link-line"></span>Home</a
                >
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">How it’s made?</a>
+               <a href="#howtomade" class="menu-toggle nav-menu-link  modal-scroll">How it’s made?</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">Our products</a>
+               <a href="#products" class="menu-toggle nav-menu-link  modal-scroll">Our products</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">Top sellers</a>
+               <a href="#sellers" class="menu-toggle nav-menu-link  modal-scroll">Top sellers</a>
             </li>
             <li class="nav-menu-item">
-               <a href="#" class="menu-toggle nav-menu-link  modal-scroll">Chocolate is loved</a>
+               <a href="#revievs" class="menu-toggle nav-menu-link  modal-scroll">Chocolate is loved</a>
             </li>
          </ul>
 
