--- a/src/partials/section-howtomade.html
+++ b/src/partials/section-howtomade.html
@@ -1,4 +1,4 @@
-<section class="howtomade-section">
+<section class="howtomade-section" id="howtomade">
    <div class="howtomade-container">
       <h2 class="howtomade-title">
          hOW IT’S<span class="howtomade-title-span">&nbsp;made?</span>
