Modal feedback, added new file "feedback.js."

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <div class="container">
-   <nav class="nav">
+   <nav class="nav" id="ancor">
       <a class="logo" href="./index.html"
          ><span class="logo-text">SIMPLY CHOCOLATE</span ><span class="logo-icon"><img src="./img/icons/logo-desktop.svg" alt=""></span></a
       >
