--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -65,7 +65,7 @@
       <div class="reviews-modal-two-text">
          <h2 class="reviews-two-description">Thank you for your feedback!</h2>
          <a class="reviews-send-link" href="#ancor">
-      <button class="reviews-send-two-btn" type="button" data-modal-close>CLOSE</button>
+      <button class="reviews-send-two-btn modal-scroll" type="button" data-modal-close>CLOSE</button>
       </a>  
       </div>          
    </div>
