--- a/src/partials/modal-revievs.html
+++ b/src/partials/modal-revievs.html
@@ -49,13 +49,13 @@
                class="reviews-form-input-message reviews-form-input"></textarea>
          </div>
          <!-- ============= OPEN BTN для 4 модалки -->
-         <button class="reviews-send-btn" type="submit" data-first-modal-close data-modal-open  >Send</button>
+         <button class="reviews-send-btn btn-close" type="submit" data-first-modal-close data-modal-open>Send</button>
       </form>
    </div>
 </div>
 <!-- =========================== NEW MODAL ======================================== -->
 
-<div class="backdrop-two is-hidden" data-modal >
+<div class="backdrop-two is-hidden" data-modal>
    <div class="reviews-modal-two">
       <!-- <button class="reviews-close-btn-two" type="button"  >
          <svg class="reviews-close-btn-two-icon" width="24" height="24" >
