--- a/src/css/section-products.css
+++ b/src/css/section-products.css
@@ -2,10 +2,6 @@
    padding-top: 72px;
 }
 
-.container-product {
-   overflow: hidden;
-}
-
 .section-product-item {
    max-width: 100%;
 }
@@ -27,16 +23,18 @@
 .section-product-list {
    display: flex;
    align-items: center;
-   justify-content: center;
+   overflow: hidden;
 }
 
 .section-product-item {
+   margin-bottom: 20px;
+   flex-shrink: 0;
+   padding: 32px 0;
    width: 100%;
    background-color: var(--Main-white);
    text-align: center;
    border: 1px solid rgba(17, 17, 17, 0.1);
    border-radius: 15px;
-   padding: 32px 0;
 }
 
 .section-product-item img {
@@ -44,6 +42,11 @@
    max-width: 100%;
    height: auto;
    margin: 0 auto 8px;
+   transition: transform 0.25s linear;
+}
+
+.section-product-item:is(:hover, :focus) img {
+   transform: scale(1.1);
 }
 
 .product-item-title {
@@ -74,25 +77,25 @@
    cursor: pointer;
 }
 
-.section-product .swiper-pagination {
+.swiper-product .swiper-pagination {
    position: relative;
 }
 
-.section-product .swiper-pagination-bullet {
+.swiper-product .swiper-pagination-bullet {
    width: 13px;
    height: 13px;
    background-color: var(--product-main-background);
    transition: background-color 250ms ease-in-out;
 }
 
-.section-product .swiper-pagination-bullet-active {
+.swiper-product .swiper-pagination-bullet-active {
    width: 28px;
    border-radius: 20px;
    background-color: var(--Orange);
    color: var(--Orange);
 }
 
-.section-product .swiper-pagination-bullets.swiper-pagination-horizontal {
+.swiper-product .swiper-pagination-bullets.swiper-pagination-horizontal {
    top: 512px;
 }
 
@@ -103,10 +106,6 @@
       padding-top: 100px;
    }
 
-   .container-product {
-      overflow: visible;
-   }
-
    .section-product-title {
       margin-bottom: 50px;
       font-weight: 600;
@@ -115,22 +114,18 @@
    }
 
    .section-product-item {
+      margin-bottom: 32px;
       max-width: 270px;
    }
 
    .section-product-list {
-      overflow: visible;
-      position: relative;
       width: 100%;
       height: 100%;
       z-index: 1;
-      /* display: flex;
-      align-items: center;
-      justify-content: center; */
       box-sizing: content-box;
    }
 
-   .section-product .swiper-pagination-bullets.swiper-pagination-horizontal {
+   .swiper-product .swiper-pagination-bullets.swiper-pagination-horizontal {
       top: 574px;
    }
 }
@@ -140,11 +135,7 @@
       padding-top: 128px;
    }
 
-   .container-product {
-      overflow: hidden;
-   }
-
-   .section-product .swiper-pagination-bullets.swiper-pagination-horizontal {
+   .swiper-product .swiper-pagination-bullets.swiper-pagination-horizontal {
       top: 602px;
    }
 }
