--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,4 +1,4 @@
-<section class="section-product" id="products">
+<section class="section-product" id="#">
    <div class="container container-product">
       <h2 class="section-product-title">Our <span>products</span></h2>
       <div class="swiper-product swiper-container">
@@ -140,7 +140,7 @@
                <button type="button" class="product-item-btn">54 UAH</button>
             </li>
          </ul>
+         <div class="swiper-pagination"></div>
       </div>
-      <div class="swiper-pagination"></div>
    </div>
 </section>
