hero buttons in flex column when less than 374px

--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -113,6 +113,10 @@ screen and (min-resolution: 2dppx) {
    .hero-subtitle {
       max-width: 295px;
    }
+
+   .hero-buttons {
+      flex-direction: column;
+   }
 }
 
 /* TABLET */
