--- a/src/partials/section-products.html
+++ b/src/partials/section-products.html
@@ -1,4 +1,4 @@
-<section class="section-product" id="products">
+<!-- <section class="section-product" id="products">
    <div class="container container-product">
       <h2 class="section-product-title">Our <span>products</span></h2>
       <div class="swiper-product swiper-container">
@@ -143,4 +143,4 @@
       </div>
       <div class="swiper-pagination"></div>
    </div>
-</section>
+</section> -->
