new brunch with buttons

--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -1,19 +1,20 @@
 <section class="hero" id="home">
-   <div class="container">
-     <div class="hero-wraper">
-       <h1 class="hero-hidden-title">Chocolate</h1>
-       <h2 class="hero-subtitle">Treat yourself or a loved one to
-         our finest ingredients for a moment
-         of pure delight!</h2>
-       <div class="hero-actions">
-         <div class="hero-buttons">
-           <button class="button buy-now-button btn-open modal-scroll" type="button" data-second-modal-open>Buy now</button>
-           <a class="button how-its-made-button" href="#howtomade">How it&#39;s made</a>
-         </div>
-         <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down-icon" width="16" height="16">
-             <use href="../img/icons/icons.svg#icon-scroll-down"></use>
-           </svg></a>
-       </div>
-     </div>
-   </div>
- </section>
+  <div class="container">
+    <div class="hero-wraper">
+      <h1 class="hero-hidden-title">Chocolate</h1>
+      <h2 class="hero-subtitle">Treat yourself or a loved one to
+        our finest ingredients for a moment
+        of pure delight!</h2>
+      <div class="hero-actions">
+        <div class="hero-buttons">
+          <button class="button buy-now-button btn-open modal-scroll" type="button" data-second-modal-open>Buy
+            now</button>
+          <a class="button how-its-made-button" href="#howtomade">How it&#39;s made</a>
+        </div>
+        <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down-icon" width="16" height="16">
+            <use href="../img/icons/icons.svg#icon-scroll-down"></use>
+          </svg></a>
+      </div>
+    </div>
+  </div>
+</section>
