--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
          <div class="footer-tablet">
             <div class="slogan-container">
                <h2 class="footer-slogan">
-                  <span class="first-word">Chocolate</span> a delicious <br />
+                  <span class="first-word">Chocolate</span> a delicious <br>
                   cure for a bad day
                </h2>
             </div>
