--- a/src/partials/section-hero.html
+++ b/src/partials/section-hero.html
@@ -12,7 +12,7 @@
           <a class="button how-its-made-button" href="#howtomade">How it&#39;s made</a>
         </div>
         <a class="scroll-down-button" href="#footer">scroll down<svg class="scroll-down-icon" width="16" height="16">
-            <use href="../img/icons/icons.svg#icon-scroll-down"></use>
+            <use href="../img/icons/icons.svg#icon-chek-box"></use>
           </svg></a>
       </div>
     </div>
