--- a/src/css/section-hero.css
+++ b/src/css/section-hero.css
@@ -8,7 +8,7 @@
    background-position: center;
    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
    border-radius: 30px;
-   background-color: #1e1823;
+   background-color: var(--dark-violet);
    background-image: linear-gradient(180deg,
          rgba(17, 17, 17, 0) 0%,
          rgba(17, 17, 17, 0.4) 100%),
@@ -65,7 +65,7 @@ screen and (min-resolution: 2dppx) {
    font-weight: 600;
    font-size: 14px;
    line-height: 1.22;
-   background: #fd9222;
+   background: var(--Orange);
    border-radius: 100px;
    padding: 14px 40px;
    border: transparent;
@@ -82,7 +82,7 @@ screen and (min-resolution: 2dppx) {
 .buy-now-button:hover,
 .buy-now-button:focus {
    background: #FCF1E0;
-   color: #FD9222;
+   color: var(--Orange);
 }
 
 
@@ -97,8 +97,8 @@ screen and (min-resolution: 2dppx) {
 
 .how-its-made-button:hover,
 .how-its-made-button:focus {
-   border: 1px solid #FD9222;
-   color: #FD9222;
+   border: 1px solid var(--Orange);
+   color: var(--Orange);
 }
 
 .scroll-down-button {
@@ -118,7 +118,7 @@ screen and (min-resolution: 2dppx) {
 .scroll-down-icon {
    width: 28px;
    height: 28px;
-   fill: #fd9222;
+   fill: var(--Orange);
    background-color: #ffffff;
    border-radius: 50%;
 
@@ -127,12 +127,12 @@ screen and (min-resolution: 2dppx) {
 
 .scroll-down-button:hover,
 .scroll-down-button:focus {
-   color: #FD9222;
+   color: var(--Orange);
 }
 
 .scroll-down-button:hover .scroll-down-icon,
 .scroll-down-button:focus .scroll-down-icon {
-   background-color: #FD9222;
+   background-color: var(--Orange);
    fill: #ffffff;
 }
 
