--- a/src/partials/section-components.html
+++ b/src/partials/section-components.html
@@ -4,7 +4,7 @@
         <p class="component-sub-text">At Simply Chocolate, we believe that the secret to exceptional chocolate is in the details. From the sourcing of the
         finest ingredients to the careful crafting of each individual piece, every step of our process adds up to one
         exceptional taste sensation.</p>
-        <ul class="component-list">
+        <ul class="component-list list">
             <li class="component-cards">
                 <a href="" class="component-cards-interactive link">
                     <div class="component-cards-img">
@@ -42,7 +42,7 @@
                     </div>
                 </a>
             </li>
-            <li class="component-cards order-img">
+            <li class="component-cards list-item">
                 <a href="" class="component-cards-interactive link">
                     <div class="component-cards-img">
                         <img class="component-cards-img-row" src="./img/components/nuts-tablet-mobile.png"
