--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -9,6 +9,21 @@
    text-decoration: none;
    color: var(--FooterMainText);
 }
+.footer-link:is(:hover, :focus) {
+   color: var(--FooterSecondText);
+}
+.footer-icon:is(:hover, :focus) {
+   fill: var(--FooterBackground);
+   stroke: var(--FooterSecondText);
+   }
+   .footer-navigation-item:not(:last-child) {
+      margin-bottom: 0;
+      margin-right: 24px;
+   }
+   .footer-navigation-item:is(:hover, :focus) {
+      color: var(--FooterSecondText);
+   }
+
 
 .footer-slogan {
    font-family: Montserrat, sans-serif;
@@ -121,11 +136,9 @@
       margin: 0;
    }
    .footer-contact-item {
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: var(--animation);
    }
-   .footer-link:is(:hover, :focus) {
-      color: var(--FooterSecondText);
-   }
+   
    .footer-line::before {
       content: '';
       margin-bottom: 25px;
@@ -142,27 +155,20 @@
       margin-left: 0;
    }
    .footer-social-media-link {
-      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      transition: var(--animation);
    }
    .footer-icon {
       transition: stroke 500ms linear, transform 350ms linear;
    }
    .footer-icon:is(:hover, :focus) {
-      fill: var(--FooterBackground);
-      stroke: var(--FooterSecondText);
       transform: rotate(360deg);
    }
+   
    .footer-contact-list {
       margin-bottom: 0;
    }
 
-   .footer-navigation-item:not(:last-child) {
-      margin-bottom: 0;
-      margin-right: 24px;
-   }
-   .footer-navigation-item:is(:hover, :focus) {
-      color: var(--FooterSecondText);
-   }
+   
 }
 
 /* ======== Desktop =============== */
