--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
 <footer>
-   <section class="footer-section">
+   <section class="footer-section" id="footer">
       <div class="container">
          <div class="footer-tablet">
             <div class="slogan-container">
                <h2 class="footer-slogan">
-                  <span class="first-word">Chocolate</span> a delicious <br>
+                  <span class="first-word">Chocolate</span> a delicious <br />
                   cure for a bad day
                </h2>
             </div>
@@ -62,16 +62,19 @@
 
          <div class="footer-line">
             <ul class="footer-navigation-list">
-               <li class="footer-navigation-item" id="home">Home</li>
-               <li class="footer-navigation-item" id="howtomade">
-                  How is made?
+               <li class="footer-navigation-item">
+                  <a href="#home">Home</a>
                </li>
-               <li class="footer-navigation-item" id="products">
-                  Our products
+               <li class="footer-navigation-item">
+                  <a href="#howtomade">How is made?</a>
                </li>
-               <li class="footer-navigation-item" id="sellers">Top sellers</li>
-               <li class="footer-navigation-item" id="review">
-                  Chocolate is loved
+               <li class="footer-navigation-item">
+                  <a href="#products">Our products</a>
+               </li>
+               <li class="footer-navigation-item">
+                  <a href="#sellers">Top sellers</a></li>
+               <li class="footer-navigation-item">
+                  <a href="#review">Chocolate is loved</a>
                </li>
             </ul>
          </div>
