--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -5,6 +5,7 @@
       </h2>
       <ul class="sellers-list">
          <li class="sellers-list-item one">
+            <div>
             <picture>
                <source
                   srcset="
@@ -100,4 +101,4 @@
       </ul>
    </div>
 </section>
-<!-- =================== MODAL OPEN BTN видалити пізніше -->
+
