--- a/src/css/header.css
+++ b/src/css/header.css
@@ -103,7 +103,7 @@
    width: 20px;
    height: 20px;
    stroke: #111111;
-   fill: #fff;
+   fill: #E2E2E2;
 }
 .social-mobile-menu {
 }
@@ -316,12 +316,36 @@
       flex: 1 1;
    }
    .nav-menu-item-desktop {
-      padding: 5px 0;
+      padding: 4px 5px;
       overflow: hidden;
       position: relative;
    }
    .nav-menu-link-desktop {
+      padding: 3px 2px;
    }
+
+   .nav-menu-link-desktop:focus {
+      
+   }
+
+
+:focus {
+   outline: 1px solid var(--Orange);
+      border-radius: 4px;
+      outline-offset: 0;
+}
+section.hero a:focus {
+   outline: 1px solid var(--Orange);
+      border-radius: 100px;
+      outline-offset: 0;
+}
+section.products button:focus {
+   outline: 0;
+   border-radius: 4px;
+   outline-offset: 0;
+}
+
+
    .nav-link-line-desktop {
    }
 
@@ -398,6 +422,15 @@
    font-size: 14px;
    line-height: 17px;
 }
+.candy-order-active {
+   outline: 0;
+    outline-offset: 0;
+}
+.candy-order-active:focus .candy-order {
+   border: 3px solid var(--Orange);
+}
+
+
 .hero-item-input {
    border: 2px solid rgba(17, 17, 17, 0.05);
 }
@@ -491,11 +524,19 @@
 .hero-form-send {
    border-radius: 100px;
    background-color: #fd9222;
-   border: none;
+   border: 1px solid var(--Orange);
    color: #fff;
    display: inline-block;
    margin-top: 18px;
+   transition: all var(--animation);
 }
+
+.hero-form-send:focus,
+.hero-form-send:hover {
+   background-color: #fff;
+   color: var(--Orange);
+}
+
 
 @media screen and (max-width: 767px) {
    .backdrop {
