--- a/src/partials/modal-hero.html
+++ b/src/partials/modal-hero.html
@@ -14,34 +14,40 @@
             <span class="hero-form-title-color">BUY</span> NOW
          </h1>
          <div class="hero-form-items">
-            <label class="hero-form-item-wrapper">
-               <input
-                  class="candy-order-checkbox"
-                  type="radio"
-                  name="candy"
-                  value="100g"
-               />
-               <div class="candy-order">
-                  <img src="./img/popup/order-item1.png" alt="candy" />
-                  <p>100 g</p>
-               </div>
-            </label>
+            <a href="" class="candy-order-active">
+               <label class="hero-form-item-wrapper">
+                  <input
+                     class="candy-order-checkbox"
+                     type="radio"
+                     name="candy"
+                     value="100g"
+                  />
+                  <div class="candy-order">
+                     <img src="./img/popup/order-item1.png" alt="candy" />
+                     <p>100 g</p>
+                  </div>
+               </label>
+            </a>
 
-            <label class="hero-form-item-wrapper">
-               <input type="radio" class="candy-order-checkbox" name="candy" value="200g" />
-               <div class="candy-order">
-                  <img src="./img/popup/order-item2.png" alt="cake" />
-                  <p>200 g</p>
-               </div>
-            </label>
+            <a href="#" class="candy-order-active">
+               <label class="hero-form-item-wrapper">
+                  <input type="radio" class="candy-order-checkbox" name="candy" value="200g" />
+                  <div class="candy-order">
+                     <img src="./img/popup/order-item2.png" alt="cake" />
+                     <p>200 g</p>
+                  </div>
+               </label>
+            </a>
 
-            <label class="hero-form-item-wrapper">
-               <input type="radio" class="candy-order-checkbox" name="candy" value="300g" />
-               <div class="candy-order">
-                  <img src="./img/popup/order-item3.png" alt="candy" />
-                  <p>300 g</p>
-               </div>
-            </label>
+            <a href="#" class="candy-order-active">
+               <label class="hero-form-item-wrapper">
+                  <input type="radio" class="candy-order-checkbox" name="candy" value="300g" />
+                  <div class="candy-order">
+                     <img src="./img/popup/order-item3.png" alt="candy" />
+                     <p>300 g</p>
+                  </div>
+               </label>
+            </a>
          </div>
 
          <div class="pers-inf-wrapper">
