--- a/src/partials/section-sellers.html
+++ b/src/partials/section-sellers.html
@@ -96,7 +96,7 @@
             </p>
          </li>
          <li class="sellers-list-item five">
-            <button class="sellers-btn" type="button">Buy now</button>
+            <button class="button buy-now-button btn-open modal-scroll" type="button" data-second-modal-open>Buy now</button>
          </li>
       </ul>
    </div>
