--- a/src/partials/section-subscribe.html
+++ b/src/partials/section-subscribe.html
@@ -7,6 +7,6 @@
          with only the finest ingredients and handcrafted with the utmost care,
          each piece is a work of art that is sure to please.
       </p>
-      <button type="submit" class="subscribe-btn" data-third-modal>Subscribe</button>
+      <button type="submit" class="subscribe-btn modal-scroll" data-third-modal-open>Subscribe</button>
    </div>
 </section>
