--- a/src/css/bodystyles.css
+++ b/src/css/bodystyles.css
@@ -39,6 +39,21 @@ background-color: #E2E2E2;
 }
 
 
+:focus {
+  outline: 1px solid var(--Orange);
+     border-radius: 4px;
+     outline-offset: 0;
+}
+section.hero a:focus {
+  outline: 1px solid var(--Orange);
+     border-radius: 100px;
+     outline-offset: 0;
+}
+section.products button:focus {
+  outline: 0;
+  border-radius: 4px;
+  outline-offset: 0;
+}
 
 
 
