--- a/src/partials/section-revievs.html
+++ b/src/partials/section-revievs.html
@@ -9,11 +9,11 @@
                <img
                   class="review-cards-foto"
                   srcset="
-                     ../img/revievs/dobrzhanska.png    1x,
-                     ../img/revievs/dobrzhanska@2x.png 2x
+                     ./img/revievs/dobrzhanska.png    1x,
+                     ./img/revievs/dobrzhanska@2x.png 2x
                   "
                   width="80"
-                  src="../img/revievs/dobrzhanska.png"
+                  src="./img/revievs/dobrzhanska.png"
                   alt="woman"
                />
                <h3 class="revies-items-title">Victoria Dobrzhanska</h3>
@@ -28,11 +28,11 @@
                <img
                   class="review-cards-foto"
                   srcset="
-                     ../img/revievs/babenko.png    1x,
-                     ../img/revievs/babenko@2x.png 2x
+                     ./img/revievs/babenko.png    1x,
+                     ./img/revievs/babenko@2x.png 2x
                   "
                   width="80"
-                  src="../img/revievs/babenko.png"
+                  src="./img/revievs/babenko.png"
                   alt="man"
                />
                <h3 class="revies-items-title">Nazar Babenko</h3>
@@ -48,11 +48,11 @@
                <img
                   class="review-cards-foto"
                   srcset="
-                     ../img/revievs/kampusch.png    1x,
-                     ../img/revievs/kampusch@2x.png 2x
+                     ./img/revievs/kampusch.png    1x,
+                     ./img/revievs/kampusch@2x.png 2x
                   "
                   width="80"
-                  src="../img/revievs/kampusch.png"
+                  src="./img/revievs/kampusch.png"
                   alt="woman"
                />
                <h3 class="revies-items-title">Olena Kampusch</h3>
@@ -68,11 +68,11 @@
                <img
                   class="review-cards-foto"
                   srcset="
-                     ../img/revievs/nataliasus.png    1x,
-                     ../img/revievs/nataliasus@2x.png 2x
+                     ./img/revievs/nataliasus.png    1x,
+                     ./img/revievs/nataliasus@2x.png 2x
                   "
                   width="80"
-                  src="../img/revievs/nataliasus.png"
+                  src="./img/revievs/nataliasus.png"
                   alt=""
                />
                <h3 class="revies-items-title">Natalia Sus</h3>
@@ -88,11 +88,11 @@
                <img
                   class="review-cards-foto"
                   srcset="
-                     ../img/revievs/danilo-nottingham.png    1x,
-                     ../img/revievs/danilo-nottingham@2x.png 2x
+                     ./img/revievs/danilo-nottingham.png    1x,
+                     ./img/revievs/danilo-nottingham@2x.png 2x
                   "
                   width="80"
-                  src="../img/revievs/danilo-nottingham.png"
+                  src="./img/revievs/danilo-nottingham.png"
                   alt="man"
                />
                <h3 class="revies-items-title">Danilo Nottingham</h3>
@@ -108,11 +108,11 @@
                <img
                   class="review-cards-foto"
                   srcset="
-                     ../img/revievs/irina-tydnuk.png    1x,
-                     ../img/revievs/irina-tydnuk@2x.png 2x
+                     ./img/revievs/irina-tydnuk.png    1x,
+                     ./img/revievs/irina-tydnuk@2x.png 2x
                   "
                   width="80"
-                  src="../img/revievs/irina-tydnuk.png"
+                  src="./img/revievs/irina-tydnuk.png"
                   alt="woman"
                />
                <h3 class="revies-items-title">Irina Tydnyuk</h3>
