--- a/src/partials/modal-hero.html
+++ b/src/partials/modal-hero.html
@@ -7,7 +7,7 @@
             data-second-modal-close
          >
             <svg>
-               <use href="../img/icons/icons.svg#icon-close"></use>
+               <use href="./img/icons/icons.svg#icon-close"></use>
             </svg>
          </button>
          <h1 class="hero-form-title">
